--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,16 @@ set(MPOJSON_SRCS
 
 add_library(mpojson ${MPOJSON_PUBLIC_INCLUDE} ${MPOJSON_SRCS} )
 
+# dependency
+find_package(mpo 2.0 REQUIRED)
+target_link_libraries(mpojson LINK_PUBLIC mpo)
+
+# to help me figure out what these vars are set to (handy!)
+message("CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
+message("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
+message("CMAKE_BINARY_DIR: ${CMAKE_BINARY_DIR}")
+message("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
+
 if (MSVC)
 	# see https://devblogs.microsoft.com/cppblog/msvc-now-correctly-reports-__cplusplus/
 	target_compile_options(mpojson PUBLIC "/Zc:__cplusplus")
@@ -28,9 +38,9 @@ target_include_directories(mpojson PUBLIC
 		$<INSTALL_INTERFACE:include>
 
 		# this will be populated when building but blank when installing
-		$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>)
+		$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
 
-set_target_properties(mpojson PROPERTIES OUTPUT_NAME "mpojson")
+		"${CMAKE_BINARY_DIR}/thirdparty/jansson-2.12/include")
 
 install(FILES ${MPOLIB_PUBLIC_INCLUDE} DESTINATION "${include_dest}")
 
